[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.9.1"
cached = "0.46.1"
indexmap = "2.1.0"
itertools = "0.12.0"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.8.0"
regex = "1.10.2"
